--- a/frontend/index.html
+++ b/frontend/index.html
@@ -256,7 +256,7 @@
                         onclick="API.auth.logout().then(() => window.location.href = 'pages/login.html')">
                         <div class="user-avatar" id="user-avatar">A</div>
                         <div class="user-info">
-                            <span class="user-name" id="user-name">admin@betsan.com</span>
+                            <span class="user-name" id="user-name">admin@otomasyon.com</span>
                         </div>
                     </div>
                 </div>
