--- a/frontend/pages/_template.html
+++ b/frontend/pages/_template.html
@@ -255,7 +255,7 @@
                     <div class="user-menu">
                         <div class="user-avatar" id="user-avatar">A</div>
                         <div class="user-info">
-                            <span class="user-name" id="user-name">admin@betsan.com</span>
+                            <span class="user-name" id="user-name">admin@otomasyon.com</span>
                         </div>
                     </div>
                 </div>
