--- a/frontend/pages/stock-movements.html
+++ b/frontend/pages/stock-movements.html
@@ -7,6 +7,7 @@
     <title>Stok Hareketleri - Otomasyon CRM</title>
 
     <!-- CSS Files -->
+    <link rel="icon" href="../favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/variables.css">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/layout.css">
