--- a/frontend/pages/opportunities.html
+++ b/frontend/pages/opportunities.html
@@ -31,7 +31,7 @@
                     <svg width="36" height="36" viewBox="0 0 36 36" fill="none">
                         <rect width="36" height="36" rx="8" fill="#3498DB" />
                         <text x="50%" y="55%" dominant-baseline="middle" text-anchor="middle" fill="white"
-                            font-size="16" font-weight="bold">B</text>
+                            font-size="16" font-weight="bold">O</text>
                     </svg>
                     <span>Otomasyon CRM</span>
                 </div>
