--- a/frontend/pages/warehouses.html
+++ b/frontend/pages/warehouses.html
@@ -31,7 +31,7 @@
                     <svg width="36" height="36" viewBox="0 0 36 36" fill="none">
                         <rect width="36" height="36" rx="8" fill="#3498DB" />
                         <text x="50%" y="55%" dominant-baseline="middle" text-anchor="middle" fill="white"
-                            font-size="16" font-weight="bold">B</text>
+                            font-size="16" font-weight="bold">O</text>
                     </svg>
                     <span>Otomasyon CRM</span>
                 </div>
@@ -253,7 +253,7 @@
                             <path d="M13.73 21a2 2 0 0 1-3.46 0"></path>
                         </svg>
                     </div>
-                    <div class="user-menu">
+                    <div class="user-menu" onclick="API.auth.logout().then(() => window.location.href = 'login.html')">
                         <div class="user-avatar" id="user-avatar">A</div>
                         <div class="user-info">
                             <span class="user-name" id="user-name">admin@otomasyon.com</span>
